# qcom-linux-testkit

./: Makefile.am  README.md  autogen.sh  configure.ac  rebuild.sh
.github/workflows/: check-executable-permissions.yml  qcom-preflight-checks.yml  shellcheck.yml  test-inventory-pages.yml  weekly-testkit-snapshot-tag.yml  zstd.yml
Runner/: Makefile.am  init_env  run-test.sh
Runner/config/: pkg_command_map.conf  pkg_provider.conf
Runner/plans/: Kernel_AU-Sanity.yaml  fastrpc-premerge.yaml  hw-probe_docker.yaml  hw-probe_local.yaml  meta-ar-ci-premerge.yaml  meta-qcom-nightly_config1.yaml  meta-qcom-nightly_config2.yaml  meta-qcom_PreMerge.yaml  qcom-next-ci-premerge.yaml
Runner/suites/: Makefile.am
Runner/suites/Connectivity/Ethernet/: run.sh
Runner/suites/Connectivity/WiFi/: README_WiFi_Connectivity.md  run.sh  ssid_list.txt
Runner/suites/Kernel/: Makefile.am
Runner/suites/Kernel/FunctionalArea/: Makefile.am
Runner/suites/Multimedia/: Makefile.am
Runner/suites/Multimedia/DSP_AudioPD/: Makefile.am  run.sh
Runner/suites/Multimedia/Graphics/: Makefile.am  run.sh
Runner/suites/Multimedia/OpenCV/: OpenCV.yaml  run.sh
Runner/suites/Multimedia/Sensors/: README_Sensors.md  run.sh  sensors.yaml
Runner/suites/Multimedia/Video/: Makefile.am
Runner/suites/Performance/Boot_Systemd_KPI_Loop/: run.sh
Runner/suites/Performance/Boot_Systemd_Validate/: Boot_Systemd_Validate.yaml  Systemd_Boot_KPI_Tests_Overview.md  boot_kpi_goals  run.sh
Runner/suites/Performance/Geekbench/: geekbench-cpu-multi.yaml  geekbench-cpu-single.yaml  geekbench-performance.yaml  run.sh
Runner/suites/Performance/Memory_Map/: Memory_Map.yaml  Memory_Map_README.md  run.sh
Runner/suites/Performance/Sysbench_Performance/: Sysbench_Performance.yaml  run.sh
Runner/suites/Performance/Tiotest/: run.sh
Runner/suites/Performance/userspace-resource-manager/: README.md  run.sh  userspace-resource-manager.yaml
Runner/tools/hw-probe/: README_hw-probe_runner.md  run.sh
Runner/utils/: Makefile.am  audio_common.sh  basics.sh  functestlib.sh  lib_apt.sh  lib_bluetooth.sh  lib_common.sh  lib_connectivity.sh  lib_diag.sh  lib_display.sh  lib_docker.sh  lib_fastrpc.sh  lib_gstreamer.sh  lib_hwprobe.sh  lib_logger.sh  lib_module_reload.sh  lib_performance.sh  lib_pkg_provider.sh  lib_rt.sh  lib_sensors.sh  lib_video.sh  platform.sh  result_parse.sh  send-to-lava.py  send-to-lava.sh
Runner/utils/camera/: lib_camera.sh  lib_camera_rdi.sh  parse_media_topology.py
host-tools/Apps_Suspend_Resume/: Apps_Suspend_Resume.yaml  run.sh  suspend_resume.py
scripts/: generate_test_inventory_html.py
(+228 files in other folders)
